# spotified-backend

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  environment.py  pyproject.toml
api/: urls.py
config/: requirements-to-freeze.txt  requirements.txt  settings.py  urls.py
config/includes/: _10_base.py  _20_credentials-tpl.py  _20_js_reverse.py  _20_restframework.py  _30_logging.py  _50_env_bernhard.py  _50_env_production.py
deployment/ansible/: ansible.cfg  app.yml  appdb.yml  common_server_setup.yml  hosts  reverse_proxy.yml
djarnish/: __init__.py  apps.py  model_observer.py  varnish.py
playlists/: models.py  serializers.py  urls.py  views.py
playlists/fixtures/: playlists.json
playlists/migrations/: 0001_initial.py  0002_auto_20190510_2145.py  0002_auto_20190614_1630.py  0003_artist_playlisttracks_track.py  0003_auto_20190616_1806.py  0004_auto_20190511_1306.py  0004_auto_20190617_1710.py  0005_auto_20190511_1309.py  0006_auto_20190511_1313.py  0007_auto_20190511_1402.py  0008_trackvote.py  0009_auto_20190511_1715.py  0010_auto_20190511_2210.py  0011_auto_20190511_2245.py  0012_auto_20190512_0032.py  0013_auto_20190515_1342.py  0014_auto_20190515_1634.py  0015_auto_20190515_1730.py  0016_auto_20190515_2100.py  0017_auto_20190515_2104.py  0018_auto_20190515_2108.py  0019_auto_20190515_2116.py
playlists/tests/: unit_tests.py
users/: authentication.py  mixins.py  models.py  serializers.py  urls.py  views.py
users/fixtures/: users.json
users/migrations/: 0001_initial.py  (+6 more)
utils/: logging.py  spotify.py
(+12 files in other folders)
